--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
     ]
   },
   "dependencies": {
+    "@blitzjs/auth": "2.0.0-beta.13",
     "@blitzjs/next": "2.0.0-beta.13",
+    "@blitzjs/rpc": "2.0.0-beta.13",
+    "@vercel/og": "0.0.19",
     "blitz": "2.0.0-beta.13",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "ts-node": "10.7.0",
-    "@blitzjs/rpc": "2.0.0-beta.13",
-    "@blitzjs/auth": "2.0.0-beta.13"
+    "ts-node": "10.7.0"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "12.0.8",
@@ -37,8 +38,8 @@
     "@types/react": "18.0.17",
     "@typescript-eslint/eslint-plugin": "5.30.5",
     "eslint": "7.32.0",
-    "eslint-config-prettier": "8.5.0",
     "eslint-config-next": "12.3.1",
+    "eslint-config-prettier": "8.5.0",
     "husky": "7.0.4",
     "jest": "27.5.1",
     "lint-staged": "12.1.7",
